# DAQ-Middleware

./: CMakeLists.txt
cmake/: DAQMWCMakeSettings.cmake  DAQMWCMakeUtilities.cmake  DAQMWConfig.cmake.in  DAQMWDependencies.cmake
conf/: CMakeLists.txt
devel/: NOTES.md  README.md  build.bash
docs/: CMakeLists.txt
etc/remote-boot/: CMakeLists.txt
examples/: CMakeLists.txt
examples/SampleLogger/: CMakeLists.txt  FileUtils.cpp  SampleLogger.cpp  SampleLogger.h  SampleLoggerComp.cpp
examples/SampleMonitor/: CMakeLists.txt  SampleMonitor.cpp  SampleMonitor.h  SampleMonitorComp.cpp
examples/SampleReader/: CMakeLists.txt  SampleReader.cpp  SampleReader.h  SampleReaderComp.cpp
src/: CMakeLists.txt
src/DaqComponent/: CMakeLists.txt  DaqComponentBase.h  version.h.in
src/DaqComponent/idl/: CMakeLists.txt
src/DaqOperator/: CMakeLists.txt  ConfFileParser.cpp  CreateDom.cpp  DaqOperator.cpp  DaqOperator.h  DaqOperatorComp.cpp  ParameterServer.h
src/daqmw/: CMakeLists.txt  daqmw_config.h.in  daqmw_lib.cpp  daqmw_lib.h  daqmw_version.cpp  daqmw_version.h.in
src/daqmw/test/: daqmwtest.cpp
src/lib/: CMakeLists.txt
src/lib/SiTCP/C/sitcpbcp/: CMakeLists.txt
src/lib/SiTCP/C/sitcpbcp/programs/: CMakeLists.txt
src/lib/SiTCP/C/sock/: CMakeLists.txt
src/lib/SiTCP/CPP/: CMakeLists.txt
src/lib/SiTCP/CPP/SitcpRbcp/: CMakeLists.txt  SitcpRbcp.cpp  SitcpRbcp.h  sample.cpp
src/lib/SiTCP/CPP/Sock/: CMakeLists.txt  Sock.cpp  Sock.h
src/lib/SiTCP/CPP/Sock/test/: CMakeLists.txt  socktest.cpp  socktestexception.cpp
src/lib/json_spirit_v2.06/: CMakeLists.txt
src/lib/json_spirit_v2.06/json_spirit/: CMakeLists.txt  json_spirit_reader.h
src/lib/json_spirit_v2.06/json_test/: CMakeLists.txt  json_spirit_value_test.cpp  json_spirit_writer_test.cpp  json_test.cpp
src/mk/: CMakeLists.txt  DAQMWBuildComponent.cmake.in  comp.mk
