
set(DAQMW_DOCS
  README
  README.json_spirit_v2.06
  DAQ-Middleware-1.1.0-Tech.pdf
  DAQ-Middleware-1.4.4-DevManual.pdf
  ${CMAKE_CURRENT_SOURCE_DIR}/../Changes
  ${CMAKE_CURRENT_SOURCE_DIR}/../Changes.ja
  ${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE
  ${CMAKE_CURRENT_SOURCE_DIR}/../COPYING
  ${CMAKE_CURRENT_SOURCE_DIR}/../COPYING.LESSER
  ${CMAKE_CURRENT_SOURCE_DIR}/../VERSION
  )

file(COPY ${DAQMW_DOCS}
  DESTINATION "${CMAKE_DATAROOT_OUTPUT_DIRECTORY}/daqmw/docs"
)  

install(FILES ${DAQMW_DOCS}
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/daqmw/docs
  )
