
set(DAQMW_ETCS
  bootComps-xinetd.sample
  services.sample
  )

set(DAQMW_EXEC_ETCS
  bootComps.py
  )

file(COPY ${DAQMW_ETCS}
  DESTINATION "${CMAKE_DATAROOT_OUTPUT_DIRECTORY}/daqmw/etc/remote-boot"
  FILE_PERMISSIONS
  OWNER_READ OWNER_WRITE
  GROUP_READ
  WORLD_READ
  )

file(COPY ${DAQMW_EXEC_ETCS}
  DESTINATION "${CMAKE_DATAROOT_OUTPUT_DIRECTORY}/daqmw/etc/remote-boot"
  FILE_PERMISSIONS
  OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE
  )

install(FILES ${DAQMW_ETCS}
  DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/daqmw/etc/remote-boot"
  PERMISSIONS
  OWNER_READ OWNER_WRITE
  GROUP_READ
  WORLD_READ
  )

install(FILES ${DAQMW_EXEC_ETCS}
  DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/daqmw/etc/remote-boot"
  PERMISSIONS
  OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE
  )
